add comments and some refacotring